# Fractal

./: CMakeLists.txt  Makefile  color_utils.c  colors.c  dynamic.c  errors.c  fractol  fractol.h  ft_atof.c  julia.c  main.c  main_bonus.c  mandelbrot.c  mlx_bonus.c  mlx_extra.c  mlx_start.c  mlx_start_bonus.c  ship.c
libft/: Makefile  ft_atoi.c  ft_calloc.c  libft.h
